--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,9 @@
 <header>
+    <a href="/" id="banner">The Ortho Cup</a>
     <nav>
-        <a href="/">The Ortho Cup</a>
-        <ul>
-            <li><a href="/golfers">Home</a></li>
-            <li><a href="/golfers/new">New Golfer</a></li>
+        
+        <a href="/golfers">Golfer directory</a>
+        <a href="/golfers/new">New Golfer</a>
 
-        </ul>
     </nav>
 </header>
