--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,3 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Open+Sans:wght@500&display=swap');
+
+*{
+    
+    font-family: 'Nunito', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+}
 body {
     background: gray;
+}
+#banner{
+    text-decoration: none;
+}
+nav {
+    display: flex;
+    justify-items: left;
+}
+
+nav a {
+    flex-direction: row;
+    height: 40px;
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+}
+nav a:hover{
+    color: lightgreen;
 }
