--- a/views/golfers/edit.ejs
+++ b/views/golfers/edit.ejs
@@ -1,6 +1,7 @@
 <h2>Edit Golfer</h2>
-<form action="/golfers/<%= golfer.id %>?_method=PUT" method="POST">
+<form action="/golfers/<%= golfer.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
     <%- include('_form_fields') %>
+    <input type="file" name="profilePic">
     <a href="/golfers/<%= golfer.id %>">Cancel</a>
     <button type="submit">Update</button>
 </form>
