--- a/views/golfers/index.ejs
+++ b/views/golfers/index.ejs
@@ -6,10 +6,10 @@
 </form>
 <br>
 <% golfers.forEach(golfer => { %>
-    <div><%= golfer.name %></div>
-    <a href="/golfers/<%= golfer.id %>">Veiw</a>
-    <a href="/golfers/<%= golfer.id %>/edit">Edit</a>
-    <form method="POST" action="/golfers/<%= golfer.id %>?_method=DELETE">
-        <button type="submit">Delete</button>
-    </form>
-<% }) %>
+    <div class="playerCard">
+      <div><%= golfer.name %></div>
+      <div><%= golfer.email %></div>
+      <div><%= golfer.phoneNumber %></div>
+      <div><a href="/golfers/<%= golfer.id %>">View</a></div>
+    </div>
+  <% }) %>
