--- a/views/layouts/index.ejs
+++ b/views/layouts/index.ejs
@@ -1,71 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <script src="https://www.paypal.com/sdk/js?client-id=AQ45sMWmZrI0GFmViHfvNBg9dCSM_u_54sdWMVoRlTfdhI0XdJbSjJq4iH4DtBJjE7vE_bzyb1yOcRep&enable-funding=venmo&currency=USD" data-sdk-integration-source="button-factory"></script>
-    <script src="../js/Register.js"></script>
-    <script src="../routes/subscribers.js"></script>
-    <link rel="stylesheet" href="../css/Register.css">
-</head>
-<body>
-    <h1>Congrats! you have been invited to participate in the 2023 Ortho Cup Torniment!</h1>
-    <h2>Registration</h2>
-    <form action="Register2.html" method="GET" enctype="multipart/form-data">
-
-        <div>
-            <label for="First-Name">First Name</label>
-            <input type="text" id="First-Name" name="First-Name" placeholder="First Name" required><br>
-        </div>
-
-        <div>
-            <label for="Last-Name">Last Name</label>
-            <input type="text" id="Last-Name" name="Last-Name" placeholder="Last Name" required><br>
-        </div>
-
-        <div>
-            <label for="Email">Email</label>
-            <input type="email" id="Email" name="Email" placeholder="Email" required><br>
-        </div>
-
-        <div>
-            <label for="Phone-Number">Phone Number</label>
-            <input type="tel" id="Phone-Number" name="Phone-Number" placeholder="(123)-456-7890" required><br>
-        </div>
-
-        <div>
-            <label for="Shirt-Size">Shirt size</label>
-            <select id="Shirt-Size" name="Shirt-Size">
-               <option value="">Select...</option>
-               <option value="xs">XS</option>
-              <option value="s">S</option>
-              <option value="m">M</option>
-             <option value="l">L</option>
-             <option value="xl">XL</option></select><br>
-        </div>
-
-        <div>
-            <label for="Hat-Size">Hat size</label>
-            <select id="Hat-Size" name="Hat-Size">
-                <option value="">Select...</option>
-                <option value="xs">XS</option>
-                <option value="s">S</option>
-                <option value="m">M</option>
-                <option value="l">L</option>
-                <option value="xl">XL</option></select><br>
-        </div>
-
-        <button>Submit</button>
-    </form>
-
-    
-    
-
-    <div id="smart-button-container">
-        <div style="text-align: center;">
-          <div id="paypal-button-container"></div>
-        </div>
-    </div>
-
-    
-       
-</body>
-</html>
+<h1>Currently there are no Announcements</h1>
