--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,11 @@
-<header>
-    <a href="/" id="banner">The Ortho Cup</a>
-    <nav>
-        
+
+<header id="headerNav">
+    <p id="title">The Ortho Cup</p>
+    <nav id="navBar" >
+        <a href="/">Home Page</a>
         <a href="/golfers">Golfer directory</a>
         <a href="/golfers/new">New Golfer</a>
+        <a href="/golfers/admin">Admin Page</a>
 
     </nav>
 </header>
