--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,28 +1,75 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&family=Open+Sans:wght@500&display=swap');
 
-*{
-    
+html {
     font-family: 'Nunito', sans-serif;
     font-family: 'Open Sans', sans-serif;
 }
 body {
-    background: gray;
+    margin:0px;
+    background: lightgray;
+  
 }
-#banner{
-    text-decoration: none;
+#mainBody{
+  margin-left: 16.5vw;
+  width: 66vw;
 }
+
+#bannerImage {
+  display: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 20em;
+  min-height: 20em;
+}
+header {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-items: left;
+  background: rgba(255,255,255,0.5);
+  color: black;
+  flex-direction: row;
+}
+
+#navBar {
+  flex: 3;
+  top: 0px;
+  justify-content: right;
+}
+
+#title {
+  flex: 1;
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin-left: 15px;
+}
+
 nav {
     display: flex;
-    justify-items: left;
+    height: 100%;
+    flex-direction: row;
 }
 
 nav a {
-    flex-direction: row;
-    height: 40px;
-    color: white;
+    height: 100%;
     text-decoration: none;
-    padding: 10px;
+    text-align: center;
+    margin-right: 15px;
+  vertical-align: center;
+  padding-top: 1.45rem;
+  color: black;
 }
 nav a:hover{
-    color: lightgreen;
+    color: darkgreen;
 }
+
+.playerCard{
+  display: flex;
+  flex-direction: row;
+}
+.playerCard div{
+  margin-left: 10px;
+} 
