--- a/views/golfers/new.ejs
+++ b/views/golfers/new.ejs
@@ -1,6 +1,9 @@
+<h1>Congrats! you have been invited to participate in the 2023 Ortho Cup Torniment!</h1>
+<h2>Registration</h2>
 <h2>New Golfer</h2>
 <form action="/golfers" method="POST">
     <%- include('_form_fields') %>
+    
     <a href="/golfers">Cancel</a>
     <button type="submit">Create</button>
 </form>
