--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,10 +8,12 @@
     <title>TheOrthoCup</title>
 </head>
 <body>
-    
+    <img id="bannerImage" src="/photos/OrthocupBanner.jpg"/>
     <%- include('../partials/header.ejs') %> 
     <%- include('../partials/errorMessage.ejs') %>
-    <%- body %> 
+    <div id="mainBody">
+        <%- body %> 
+    </div>
     
 </body>
 </html>
